[package]
name = "commedia"
version = "0.1.0"
authors = ["Desmond Germans <desmond@germansmedia.nl>"]
edition = "2018"

[target.x86_64-unknown-linux-gnu.dependencies]
libc = "*"
x11 = { version = "2.18.1", features = ["xlib", "glx"] }
xcb = { version = "0.8", features = ["xlib_xcb", "dri2"] }
gl = "*"
rand = "*"
rand_distr = "*"
math = { git = "http://github.com/germansmedia/math" }
image = { git = "http://github.com/germansmedia/image" }
